add details page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,18 @@
 {
     "cSpell.words": [
+        "atmosphering",
         "daisyui",
         "Dmytro",
         "hookform",
         "reduxjs",
         "Rogkov",
+        "starships",
         "tailwindcss",
         "tanstack",
         "Technolgies",
         "todos",
         "Uncomplete",
+        "xyflow",
         "zustand"
     ]
 }
