--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@hookform/resolvers": "^3.6.0",
         "@reduxjs/toolkit": "^2.2.5",
         "@tanstack/react-query": "^5.51.1",
+        "@xyflow/react": "^12.0.3",
         "axios": "^1.7.2",
         "classnames": "^2.5.1",
         "lodash.debounce": "^4.0.8",
