--- a/package.json
+++ b/package.json
@@ -1,40 +1,46 @@
 {
-    "name": "next-template",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "@hookform/resolvers": "^3.6.0",
-        "@reduxjs/toolkit": "^2.2.5",
-        "@tanstack/react-query": "^5.51.1",
-        "@xyflow/react": "^12.0.3",
-        "axios": "^1.7.2",
-        "classnames": "^2.5.1",
-        "lodash.debounce": "^4.0.8",
-        "next": "14.2.4",
-        "react": "^18",
-        "react-dom": "^18",
-        "react-hook-form": "^7.52.0",
-        "react-icons": "^5.2.1",
-        "react-redux": "^9.1.2",
-        "yup": "^1.4.0",
-        "zustand": "^4.5.4"
-    },
-    "devDependencies": {
-        "@types/lodash.debounce": "^4.0.9",
-        "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
-        "daisyui": "^4.12.2",
-        "eslint": "^8",
-        "eslint-config-next": "14.2.4",
-        "postcss": "^8",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5"
-    }
+  "name": "next-template",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "test": "jest"
+  },
+  "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
+    "@reduxjs/toolkit": "^2.2.5",
+    "@tanstack/react-query": "^5.51.1",
+    "@xyflow/react": "^12.0.3",
+    "axios": "^1.7.2",
+    "classnames": "^2.5.1",
+    "lodash.debounce": "^4.0.8",
+    "next": "14.2.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-hook-form": "^7.52.0",
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
+    "yup": "^1.4.0",
+    "zustand": "^4.5.4"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
+    "@types/jest": "^29.5.12",
+    "@types/lodash.debounce": "^4.0.9",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "daisyui": "^4.12.2",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  }
 }
